--- a/config.toml
+++ b/config.toml
@@ -5,6 +5,7 @@ languageCode = "en-us"
 title = "Guin Guin"
 theme = "beautifulhugo"
 metaDataFormat = "yaml"
+enableEmoji = true
 
 [Params]
   subtitle = "How many times do I try blogging"
